spent way too long fixing footer not to commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,49 @@
-.contact-form {
-  margin-left: 10%;
-
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
+div.root {
+  height: 100%;
+}
+
+.content {
+flex: 1 0 auto;
+}
+
+/*PORTFOLIO PAGE STYLING*/
 .portfolio {
   margin: 5%;
 }
 
+
+/*CONTACT ME PAGE*/ 
 .social-media {
-  float: right;
+  margin: 10%;
+}
+
+div.contact-title {
+  margin: 5%;
+}
+
+form.contact-form {
+width: 25%;
+}
+
+div.contact {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 0;
+}
+
+/*FOOTER*/
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
